turtleart.lessons.turtleart.Main.DiskFourth.scala.error
Source:5: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
		gauche()(1)
                      ^