turtleart.lessons.turtleart.Main.DiskFourth.scala.code
override def run() {
for (k <- 1 to 90) {
		avance(100)
		gauche()(1)
		recule(100)
	}

}
